--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "admin": "^1.4.1",
+    "dateformat": "^4.5.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.9",
