--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ config.json
 .gitignore
 .eslintrc.json
 .vscode
+serviceAccount.env
+freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
+freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
+.gitignore
