--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ serviceAccount.env
 freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
 freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
 .gitignore
+freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
