--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
 freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
 .gitignore
 freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
+freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
+.gitignore
