--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
 freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
 freshfea's-workshop3-supra_elektrik_boogalo_js_edition.js
 .gitignore
+.eslintrc.json
+.env
