--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    // REMEMBER TO REMOVE THE COMMENT!
     "token": "INSERT YOUR BOT TOKEN HERE",
     // YOU MAY CHANGE THE BOT PREFIX IF YOU WOULD LIKE TO
     "prefix": "!",
