--- a/config.json
+++ b/config.json
@@ -1,8 +1,5 @@
 {
-    // REMEMBER TO REMOVE THE COMMENT!
     "token": "INSERT YOUR BOT TOKEN HERE",
-    // YOU MAY CHANGE THE BOT PREFIX IF YOU WOULD LIKE TO
-    "prefix": "!",
-    // EXAMPLE OF DATBASE URL: https://friedpoop-d42-default-rtdb.firebaseio.com
-    "databaseURL": "INSERT YOUR FIREBASE FIRE STORE DATABASE HERE"
+    "prefix": "! --YOU MAY CHANGE THE BOT PREFIX IF YOU WOULD LIKE TO",
+    "databaseURL": "INSERT YOUR FIREBASE FIRE STORE DATABASE URL HERE. EXAMPLE OF DATABASE URL: https://friedpoop-d42-default-rtdb.firebaseio.com"
 }
