--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deskord",
-  "version": "1.0.0",
-  "description": "diskord bot",
+  "version": "1.7.0",
+  "description": "roblox-remote-ban-discord.js",
   "main": "index.js",
   "scripts": {},
   "keywords": [
@@ -15,13 +15,14 @@
     "dateformat": "^4.5.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "firebase": "^8.2.9",
-    "firebase-admin": "^9.5.0",
+    "firebase": "^8.6.5",
+    "firebase-admin": "^9.9.0",
     "lodash": "^4.17.21",
     "lodash-migrate": "^0.3.16",
     "module-alias": "^2.2.2",
-    "ms": "^2.1.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "readable-to-ms": "^1.0.3",
+    "ws": "^7.4.6"
   },
   "devDependencies": {
     "@types/dateformat": "^3.0.1",
@@ -29,6 +30,7 @@
   },
   "_moduleAliases": {
     "@root": ".",
+    "@class": "src/class",
     "@serviceAccount": "./serviceAccount.json",
     "@commands": "src/commands",
     "@util": "src/util",
