--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "module-alias": "^2.2.2",
     "ms": "^2.1.3",
     "path": "^0.12.7",
+    "prismjs": "^1.24.0",
     "readable-to-ms": "^1.0.3",
     "ws": "^7.5.0"
   },
