--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "admin": "^1.4.1",
     "axios": "^0.21.1",
     "dateformat": "^4.5.1",
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.0.0-dev.a8984bc.1626048234",
     "dotenv": "^8.6.0",
-    "firebase": "^8.6.8",
-    "firebase-admin": "^9.9.0",
+    "firebase": "^8.7.1",
+    "firebase-admin": "^9.10.0",
     "lodash": "^4.17.21",
     "lodash-migrate": "^0.3.16",
     "module-alias": "^2.2.2",
     "ms": "^2.1.3",
     "path": "^0.12.7",
-    "prismjs": "^1.24.0",
+    "prismjs": "^1.24.1",
     "readable-to-ms": "^1.0.3",
-    "ws": "^7.5.0"
+    "ws": "^7.5.3"
   },
   "devDependencies": {
     "@types/dateformat": "^3.0.1",
-    "eslint": "^7.29.0"
+    "eslint": "^7.30.0"
   },
   "_moduleAliases": {
     "@root": ".",
