--- a/package.json
+++ b/package.json
@@ -17,14 +17,9 @@
     "dotenv": "^8.6.0",
     "firebase": "^8.7.1",
     "firebase-admin": "^9.10.0",
-    "lodash": "^4.17.21",
-    "lodash-migrate": "^0.3.16",
     "module-alias": "^2.2.2",
     "ms": "^2.1.3",
-    "path": "^0.12.7",
-    "prismjs": "^1.24.1",
-    "readable-to-ms": "^1.0.3",
-    "ws": "^7.5.3"
+    "readable-to-ms": "^1.0.3"
   },
   "devDependencies": {
     "@types/dateformat": "^3.0.1",
